fuse: Remove duplicate assignment

https://bugzilla.gnome.org/show_bug.cgi?id=712382